[project]
name = "shellserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "isort>=8.0.1",
    "langchain-anthropic>=1.4.4",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.1.0",
    "langchain[openai]>=1.3.2",
    "langgraph>=1.2.2",
    "mcp[cli]>=1.6.0",
    "python-dotenv>=1.1.0",
]
